# anonshield

./: .gitignore  .gitleaks.toml  CITATION.bib  CITATION.cff  CONTRIBUTING.md  README.md  anon.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci-cd.yml  docker-image.yml  dockerhub-readme.yml  dockerhub.yml
docker/: DOCKERHUB_README.md  Dockerfile
docs/: INDEX.md
docs/developers/: ANONYMIZATION_STRATEGIES.md  ARCHITECTURE.md  EXTENSIBILITY.md  OCR_ROADMAP.md  PDF_ENGINE_EVALUATION.md  SLM_INTEGRATION_GUIDE.md  WEB_SYSTEM_DESIGN.md
docs/users/: CLI_REFERENCE.md  CONFIGURATION_FILE.md  OCR_ENGINES.md
docs/web/: SETUP.md
examples/: anon_config.example.yaml
scripts/: deploy-to-a9.sh  deploy.sh  watch-prs.sh
src/anon/: api.py  engine.py  entity_detector.py  model_registry.py  processors.py  standalone_strategy.py
src/anon/core/: run_config.py
src/anon/ocr/: __init__.py  factory.py
src/anon/slm/: prompts.py
tests/: test_anon_integration.py
web/: DEPLOY.md  Makefile  RUNBOOK.md  docker-compose.a9.yml  docker-compose.host.yml  docker-compose.prod.yml  warm_cache.sh
web/backend/: Dockerfile  main.py
web/backend/routers/: entities.py  jobs.py  metrics.py  ocr_benchmark.py
web/backend/services/: job_service.py  metrics.py  profile.py  storage.py
web/backend/sidecar/: app.py
web/backend/tests/: test_api_routes.py  test_entities_by_model.py  test_services.py
web/backend/workers/: celery_app.py  tasks.py
web/frontend/: Dockerfile  package-lock.json  package.json
web/frontend/src/: app.html
web/frontend/src/lib/: api.ts  deck-en.ts  deck.ts  i18n.ts
web/frontend/src/lib/components/: DeckScroll.svelte  DeckStage.svelte  DropZone.svelte  EntitySelector.svelte  FieldSelector.svelte  HtmlDeck.svelte  KeyInput.svelte  ProgressBar.svelte  RegexBuilder.svelte  SlideDeck.svelte  Tutorial.svelte
web/frontend/src/lib/stores/: config.ts  job.ts
web/frontend/src/routes/: +layout.svelte  +page.svelte
web/frontend/src/routes/app/: +page.svelte
web/frontend/src/routes/sitemap.xml/: +server.ts
web/frontend/static/: robots.txt
(+2 files in other folders)
