[project]
name = "anonshield"
version = "0.1.0"
description = "Anonimizador"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "protobuf>=6.30.1",
    "python-docx>=1.1.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0,<5.0.0",
    "spacy-huggingface-pipelines>=0.0.4",
    "pytesseract>=0.3.10",
    "Pillow>=10.4.0",
    "PyMuPDF>=1.24.9",
    "lxml>=6.1.0",
    "ijson>=3.4.0.post0",
    "orjson>=3.11.4",
    "tenacity",
    "PyYAML>=6.0.1",
    "python-magic>=0.4.27",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "torch>=2.6.0",
    "torchvision",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]
# Web server + infrastructure (FastAPI, Celery, Redis…)
# Used by Dockerfile.dev and Dockerfile (prod)
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "slowapi>=0.1.9",
    "pt-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.8.0/pt_core_news_lg-3.8.0-py3-none-any.whl",
]
# Web integration tests (httpx test client)
web-dev = [
    { include-group = "web" },
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "slm: marks tests that require Ollama running (deselect with '-m not slm')",
    "ocr: marks tests that require OCR engines to be installed",
]
